# Slate

slate/: pyproject.toml
slate/backend/: main.py
slate/backend/api/: users.py
slate/backend/src/api/: narratives.py
slate/backend/src/models/: models.py
slate/frontend/: frontend.py
